--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         background-color: #025157;
     }
 </style>
-    <link rel="stylesheet" href="styles.css">
+    <!-- <link rel="stylesheet" href="styles.css"> -->
 </head>
 <body>
     <!-- Esto es lo que se vera en el navegador web -->
